경북대 BE_정수현 2주차 과제(step1) (#152)
* 이전 단계에서 가져오기

* docs: Valid에 관한 feat작성

* setting: validation dependency 추가

* feat: 상품이름이 공백 포함 최대 15자인지 validate

* feat: 상품이름 @NotNull to @NotBlank

* feat: 특정 특수문자만 포함하는지 validate

* docs: validation 적용

* feat: controller에 @Valid 어노테이션 추가

* feat: BindingResult를 통한 validation 정보 얻기

* fix: regex가 잘못된 부분을 고침

* feat(ProductRequestDto): tymeleaf를 위한 getter추가

* chores: eof에 newline추가

* refactor: add-product-form과 modify-product-form으로 나눔

* fix: error를 thymeleaf가 표시하도록 수정

* feat: price에 0이상인지 validation 추가

* feat: price valid message 추가

* feat: imageUrl에 @NotBlank 추가

* feat: id에 @NotNull 추가

* feat: ProductException 추가

* chores: Bean 생성자 하나일 경우 @AutoWired 삭제 가능

* feat: ProductExceptionHandler 추가

* feat: kakao라는 단어 포함하는지 validator 추가

* feat: kakaoWord를 포함하는지 validate

* feat: 정규표현식 가-힣 추가

* feat: adminController Exceptionhandler 적용
thymeleaf error page 작성
adminController에 ProductException에 대한 thymeleaf적용
ProductValidator에 @Component 추가

* feat: product Exception에 관한 global처리

* chores: responseEntity 구문 조금 변경

* Resolve merge Conflict

* feat: restController의 response에 errorMessage담기

* chores: exception 패키지 위치 변경

* refactor: code convention and optimizing import

* refactor: merge에 의해 생기는 code convention 해결

* refactor: collect(Collectros.toList()) to toList()

Co-authored-by: sang5c <skah321@gmail.com>

* refactor:enum constructor is already private

Co-authored-by: sang5c <skah321@gmail.com>

* feat: 사용하지 않는 field 제거

* change: 요구사항 제대로 반영 kakao->카카오

* refactor: 반복되는 메서드 줄임

* fix: productController에도 변경

---------

Co-authored-by: sang5c <skah321@gmail.com>