@@ -2,13 +2,17 @@ package gift.controller;
 
 import gift.controller.dto.ProductRequestDto;
 import gift.controller.dto.ProductResponseDto;
-import gift.model.Product;
+import gift.exception.ProductErrorCode;
+import gift.exception.ProductException;
+import gift.controller.validator.ProductValidator;
 import gift.model.ProductDao;
+import jakarta.validation.Valid;
 import java.util.List;
 import java.util.stream.Collectors;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
+import org.springframework.validation.BindingResult;
+import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.ModelAttribute;
 import org.springframework.web.bind.annotation.PathVariable;
@@ -19,44 +23,56 @@ import org.springframework.web.bind.annotation.RequestMapping;
 @RequestMapping("/admin/list")
 public class AdminController {
 
-    private ProductDao productDao;
+    private final ProductDao productDao;
+    private final ProductValidator productValidator;
 
-    @Autowired
-    public void setProductDao(ProductDao productDao) {
+    public AdminController(ProductDao productDao, ProductValidator productValidator) {
         this.productDao = productDao;
+        this.productValidator = productValidator;
     }
 
     @GetMapping
     public String getAllProducts(Model model) {
         List<ProductResponseDto> productList = productDao.selectAllProduct()
             .stream()
-            .map(Product::toProductResponseDto)
-            .collect(Collectors.toList());
+            .map(ProductResponseDto::from)
+            .toList();
         model.addAttribute("productList", productList);
         return "list";
     }
 
     @GetMapping("/add")
     public String addProductForm(Model model) {
-        model.addAttribute("product", new ProductResponseDto());
-        return "product-form";
+        model.addAttribute("productRequestDto", new ProductRequestDto());
+        return "add-product-form";
     }
 
     @PostMapping("/add")
-    public String addProduct(@ModelAttribute ProductRequestDto productRequestDto) {
+    public String addProduct(@Valid @ModelAttribute ProductRequestDto productRequestDto,
+        BindingResult bindingResult) {
+        if (bindingResult.hasErrors()) {
+            return "add-product-form";
+        }
+        productValidator.validateKakaoWord(productRequestDto);
         productDao.insertProduct(productRequestDto.toEntity());
         return "redirect:/admin/list";
     }
 
     @GetMapping("/edit/{id}")
     public String updateProductForm(@PathVariable("id") Long id, Model model) {
-        model.addAttribute("product", productDao.selectProductById(id));
-        return "product-form";
+        model.addAttribute("productRequestDto",
+            ProductRequestDto.from(productDao.selectProductById(id)));
+        return "modify-product-form";
     }
 
     @PostMapping("edit/{id}")
     public String updateProduct(@PathVariable("id") Long id,
-        @ModelAttribute ProductRequestDto productRequestDto) {
+        @Valid @ModelAttribute ProductRequestDto productRequestDto,
+        BindingResult bindingResult) {
+        if (bindingResult.hasErrors()) {
+            return "modify-product-form";
+        }
+        productValidator.validateKakaoWord(productRequestDto);
         productDao.updateProductById(id, productRequestDto.toEntity());
         return "redirect:/admin/list";
     }
@@ -66,4 +82,11 @@ public class AdminController {
         productDao.deleteProductById(id);
         return "redirect:/admin/list";
     }
+
+    @ExceptionHandler(ProductException.class)
+    public String handleProductException(ProductException productException, Model model) {
+        model.addAttribute("errorMessage", productException.getMessage());
+        return "error";
+    }
+
 }
